--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             body{
                 background-image: url("background.jpg");
             }
+            p{
+                color: white;
+            }
         </style>
     </head>
     <body style="background-color: cornsilk;">
